front end, flask impl, improvements on text cleaning

--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -1,34 +1,2 @@
-<style>
+<app-navigationbar></app-navigationbar>
 
-  html,
-  body {
-  height: 100%;
-  }
-  .container {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  }
-
-</style>
-<div class="container" id="twitter_request">
-    <div class="col-8">
-      <div class="col-12">
-        Test with your own text
-      </div>
-      <div class="col-12">
-        xxxx
-      </div>
-    </div>
-    <div class="col-4">
-      <div class="col-8">
-        <div class="col-12">
-          Results
-        </div>
-        <div class="col-12">
-          xxxx
-        </div>
-      </div>
-    </div>
-</div>
