--- a/frontEnd/src/app/product/classification.component.html
+++ b/frontEnd/src/app/product/classification.component.html
@@ -6,6 +6,8 @@
     background-color: white;
 }
 
+
+
 </style>
 <div class="container" style="border: 1.5px solid #dbdbdb;border-radius: 13px;">
   <div class="row">
@@ -16,7 +18,7 @@
           <textarea style="
     width: 100% !important;
     padding: 9px;
-" #textInput placeholder="Place yours text" required rows="10" cols="60" ></textarea>
+" #textInput placeholder="Place yours text" required rows="10" cols="60"></textarea>
         </div>
         <div class="form-group text-center">
           <button type="button" class="btn btn-primary btn-lg" style="
@@ -45,11 +47,25 @@
         <h4>Sentiment</h4>
       </div>
       <div class="col-sm-12" style="
-    min-height: 70px;
+    min-height: 20px;
     border: 0.5px solid #dcdcdc;
     padding: 5px;
 ">
-        {{classification.sentiment}}
+        Neutral : {{classification.neutral}}
+      </div>
+      <div class="col-sm-12" style="
+    min-height: 20px;
+    border: 0.5px solid #dcdcdc;
+    padding: 5px;
+">
+        Negative : {{classification.negative}}
+      </div>
+      <div class="col-sm-12" style="
+    min-height: 20px;
+    border: 0.5px solid #dcdcdc;
+    padding: 5px;
+">
+        Positive : {{classification.positive}}
       </div>
     </div>
   </div>
