--- a/frontEnd/src/app/product/classification.component.html
+++ b/frontEnd/src/app/product/classification.component.html
@@ -65,9 +65,10 @@
         <table class="table">
           <thead>
           <tr>
-            <th scope="col">Model</th>
+            <th scope="col">Model (Over Sampling)</th>
             <th scope="col">Bag of Words</th>
             <th scope="col">Word2Vec</th>
+            <th scope="col">TF-IDF</th>
           </tr>
           </thead>
           <tbody>
@@ -79,6 +80,9 @@
             <td class="text-white" [ngClass]="getSentiment(classification?.word2Vec?.logistic_regression?.Sentiment)">
               {{classification?.word2Vec?.logistic_regression?.Sentiment}}
             </td>
+            <td class="text-white" [ngClass]="getSentiment(classification?.word2Vec?.logistic_regression?.Sentiment)">
+              {{classification?.tfidf?.logistic_regression?.Sentiment}}
+            </td>
           </tr>
           <tr>
             <td>Support Vector Machine</td>
@@ -87,6 +91,9 @@
             </td>
             <td class="text-white" [ngClass]="getSentiment(classification?.bag_of_words?.svm?.Sentiment)">
               {{classification?.word2Vec?.svm?.Sentiment}}
+            </td>
+            <td class="text-white" [ngClass]="getSentiment(classification?.bag_of_words?.svm?.Sentiment)">
+              {{classification?.tfidf?.svm?.Sentiment}}
             </td>
           </tr>
           <tr>
@@ -97,6 +104,9 @@
             <td class="text-white" [ngClass]="getSentiment(classification?.word2Vec?.naive_bayes?.Sentiment)">
               {{classification?.word2Vec?.naive_bayes?.Sentiment}}
             </td>
+            <td class="text-white" [ngClass]="getSentiment(classification?.word2Vec?.naive_bayes?.Sentiment)">
+              {{classification?.tfidf?.naive_bayes?.Sentiment}}
+            </td>
           </tr>
           <tr>
             <td>Decision Tree</td>
@@ -105,6 +115,9 @@
             </td>
             <td class="text-white" [ngClass]="getSentiment(classification?.bag_of_words?.decision_tree?.Sentiment)">
                 {{classification?.word2Vec?.decision_tree?.Sentiment}}
+            </td>
+            <td class="text-white" [ngClass]="getSentiment(classification?.bag_of_words?.decision_tree?.Sentiment)">
+                {{classification?.tfidf?.decision_tree?.Sentiment}}
             </td>
           </tr>
           <tr>
@@ -115,9 +128,13 @@
             <td class="text-white" [ngClass]="getSentiment(classification?.word2Vec?.mlp?.Sentiment)">
               {{classification?.word2Vec?.mlp?.Sentiment}}
             </td>
+            <td class="text-white" [ngClass]="getSentiment(classification?.word2Vec?.mlp?.Sentiment)">
+              {{classification?.tfidf?.mlp?.Sentiment}}
+            </td>
           </tr>
           </tbody>
         </table>
+
         <hr>
         <h4>Logistic Regression</h4>
 
@@ -125,21 +142,29 @@
           <thead>
           <tr>
             <th scope="col">Sentiment</th>
-            <th scope="col">Probabilities</th>
+            <th scope="col">Bag Of Words</th>
+            <th scope="col">Word2Vec</th>
+            <th scope="col">TF-IDF</th>
           </tr>
           </thead>
           <tbody>
           <tr>
             <td>Neutral</td>
             <td>{{classification?.bag_of_words?.logistic_regression_probabilities?.neutral}}</td>
+            <td>{{classification?.bag_of_words?.logistic_regression_probabilities?.neutral}}</td>
+            <td>{{classification?.bag_of_words?.logistic_regression_probabilities?.neutral}}</td>
           </tr>
           <tr>
             <td>Negative</td>
-            <td>{{classification?.bag_of_words?.logistic_regression_probabilities?.negative}}</td>
+            <td>{{classification?.word2Vec?.logistic_regression_probabilities?.negative}}</td>
+            <td>{{classification?.word2Vec?.logistic_regression_probabilities?.negative}}</td>
+            <td>{{classification?.word2Vec?.logistic_regression_probabilities?.negative}}</td>
           </tr>
           <tr>
             <td>Positive</td>
-            <td>{{classification?.bag_of_words?.logistic_regression_probabilities?.positive}}</td>
+            <td>{{classification?.tfidf?.logistic_regression_probabilities?.positive}}</td>
+            <td>{{classification?.tfidf?.logistic_regression_probabilities?.positive}}</td>
+            <td>{{classification?.tfidf?.logistic_regression_probabilities?.positive}}</td>
           </tr>
           </tbody>
         </table>
